# daisychain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.am  README.md  autoclean.sh  bootstrap  configure.ac
.github/workflows/: cmake-macos-12-qt6-dmg.yml  cmake-macos-latest-qt6-dmg.yml  cmake-macos-qt6-dmg.yml  cmake-windows-latest-qt6-exe.yml
chain/: CMakeLists.txt
chain/cmake/: MacOSXBundleInfo.plist.in
chain/resources/: chainresources.qrc  close.psd  daisychain.icns  win_icon.rc
chain/src/: chain.cpp  chain.h  chainbrowser.cpp  chainbrowser.h  chainfonts.h  chainmodel.cpp  chainmodel.h  chainnotes.cpp  chainnotes.h  chainreaddata.h  chainscene.cpp  chainscene.h  chainstyles.h  chainview.cpp  chainview.h  chainwindow.cpp  chainwindow.h  chainwritedata.h  commandmodel.cpp  commandmodel.h  concatmodel.cpp  concatmodel.h  distromodel.cpp  distromodel.h  environwidget.cpp  environwidget.h  filelistmodel.cpp  filelistmodel.h  filtermodel.cpp  filtermodel.h  graphmodel.cpp  graphmodel.h  logfilter.cpp  logfilter.h  loghighlighter.cpp  loghighlighter.h  lognotifier.cpp  lognotifier.h  logwidget.cpp  logwidget.h  (+2 more)
daisy/: CMakeLists.txt  Makefile.am  configure.ac
daisy/src/: main.cpp
libdaisychain/: CMakeLists.txt  Makefile.am  configure.ac
libdaisychain/src/: commandlinenode.cpp  commandlinenode.h  concatnode.cpp  concatnode.h  distronode.cpp  distronode.h  distronode_win.cpp  filelistnode.cpp  filelistnode.h  filternode.cpp  filternode.h  graph.cpp  graph.h  graph_win.cpp  graph_win.h  logger.cpp  logger.h  node.cpp  node.h  node_win.h  remotenode.cpp  remotenode.h  signalhandler.h  utils.h  utils_win.h  watchnode.cpp  watchnode.h  watchnode_win.cpp
patches/: nodeeditor.patch
python/: CMakeLists.txt
python/src/: pydaisychain.cpp
